--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.7",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "highcharts": "^11.4.8",
+    "highcharts-accessibility": "^0.1.7",
     "highcharts-vue": "^2.0.1",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.0",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.37",
     "vue3-apexcharts": "^1.6.0"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.0.7",
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
