--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/auto-import-resolver": "4.0.7",
     "@primevue/themes": "^4.0.7",
-    "apexcharts": "^3.53.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.7.7",
-    "highcharts": "^11.4.8",
-    "highcharts-accessibility": "^0.1.7",
-    "highcharts-vue": "^2.0.1",
-    "primeicons": "^5.0.0",
-    "primevue": "^3.12.0",
+    "chart.js": "^4.4.4",
+    "postcss": "^8.4.31",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.7",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-primeui": "^0.3.4",
-    "vue": "^3.4.37",
-    "vue3-apexcharts": "^1.6.0"
+    "unplugin-vue-components": "latest",
+    "vite": "^4.0.0",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@primevue/auto-import-resolver": "^4.0.7",
-    "@vitejs/plugin-vue": "^5.1.2",
-    "typescript": "^5.5.3",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.1",
-    "vue-tsc": "^2.0.29"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    "vite": "^5.2.13"
   }
 }
