--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/auto-import-resolver": "4.0.7",
     "@primevue/themes": "^4.0.7",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "fontawesome": "^5.6.3",
     "postcss": "^8.4.31",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
@@ -22,7 +29,8 @@
     "tailwindcss-primeui": "^0.3.4",
     "unplugin-vue-components": "latest",
     "vite": "^4.0.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-fontawesome": "^0.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
